--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongoose": "^5.0.9",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
