--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "start-worker": "node ./bin/worker.js"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
